# rw-cli-codecollection

./: .bookignore  .devcontainer.json  .env.example  .gitbook.yaml  .gitignore  AI_CODEBUNDLE_GENERATOR_USAGE.md  APPLICATION_TROUBLESHOOTING_GUIDE.md  BUG_FIXES_SUMMARY.md  CHANGELOG.md  Dockerfile  Introduction.md  LOG_ANALYSIS_IMPROVEMENTS.md  MANIFEST.in  QUICK_START_CODEBUNDLE_GENERATOR.md  README.md  README_CODEBUNDLE_GENERATOR.md  SUMMARY.md  TESTING_BEFORE_MAIN.md  codecollection.yaml  frontend-memory-optimization-analysis.md  interactive_console_output.xml  memory-optimization-implementation-guide.md  out.txt  pyproject.toml  quick-runsession-fixes.md  readme_header.md  requirements.txt  runsession-memory-optimization.md  setup.py  task_analysis.json
.github/: AI_CODEBUNDLE_GENERATOR_USAGE_UPDATED.md  AUTO_CODEBUNDLE_GENERATOR.md  AUTO_CODEBUNDLE_GENERATOR_SUMMARY.md  codebundle-generator-config.yml  config.yaml
.github/ISSUE_TEMPLATE/: auto-generate-codebundle.md  codebundle.md
.github/queries/: addDiscussionComment.graphql  createDiscussion.graphql  deleteDiscussion.graphql  getComments.graphql  getDiscussion.graphql  searchDiscussions.graphql
.github/scripts/: SCORE.MD  e2e.py  gitbook-summary.sh  index-config.yaml  index.py  meta.py  pydoc2md.sh  reference_scores.json  score.py  task_analysis.json  update_titles.py
.github/workflows/: auto-generate-codebundle-external.yml  auto-generate-codebundle.yml  build-all-branches.yaml  build-push.yaml  docs.yaml  docs_pr.yaml  e2e.yml  generate-index.yml  java-log-analysis-tests.yml  pypi.yaml  release.yml  score.yaml  score_manual.yaml  score_pr.yaml  semver.yml  update-discussion.yml
codebundles/: .cursorrules  .cursorrules-template  CURSOR_RULES_README.md
codebundles/atlassian-org-license-optimization/: .gitignore  README.md  analyze-atlassian-product-overlap.sh  atlassian-api-helpers.sh  atlassian_inactive_billable_summary.txt  atlassian_license_reclamation_report.md  atlassian_pending_invite_data.json  atlassian_pending_invite_issues.json  (+11 more)
docs/: libraries_documentation.md
generator-api/: main.py
scripts/: generate_skill_md.py
(+2601 files in other folders)
